bug---
white space on safari under page

--- a/css/main.scss
+++ b/css/main.scss
@@ -259,7 +259,7 @@ footer {
         img:nth-of-type(3) {
             display: inline-block;
             width: 65%;
-            margin-top: 35%;
+            margin-top: 4em;
         }
 
         h2 {
